service/grpc-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
      - name: service
        image: ./service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: net-service
spec:
  selector:
    app: service
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
  type: NodePort
