service/grpc-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: grpc-service-ingress
spec:
  rules:
  - host: net-service
    http:
      paths:
      - backend:
          serviceName: net-service
          servicePort: grpc
